--- a/requirements.txt
+++ b/requirements.txt
@@ -106,6 +106,7 @@ terminado==0.18.1
 tinycss2==1.3.0
 tk==0.1.0
 tornado==6.4.1
+tqdm==4.66.5
 traitlets==5.14.3
 types-python-dateutil==2.9.0.20240906
 typing_extensions==4.12.2
