--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ ENV/
 env/
 venv.bak/
 venv/
-dora/
+.venv/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
