--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ dependencies = [
     "seaborn (>=0.13.2,<0.14.0)",
     "numpy (>=2.3.3,<3.0.0)",
     "matplotlib (>=3.10.6,<4.0.0)",
-    "tqdm (>=4.67.1,<5.0.0)"
+    "tqdm (>=4.67.1,<5.0.0)",
+    "typer[rich] (>=0.19.2,<0.20.0)"
 ]
 
 [tool.poetry]
