--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "numpy (>=2.3.3,<3.0.0)",
     "matplotlib (>=3.10.6,<4.0.0)",
     "tqdm (>=4.67.1,<5.0.0)",
-    "typer[rich] (>=0.19.2,<0.20.0)"
+    "typer[rich] (>=0.19.2,<0.20.0)",
+    "pyyaml (>=6.0.3,<7.0.0)"
 ]
 
 [tool.poetry]
