--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,7 @@ max-line-length = 120
 
 [tool.pylint.messages_control]
 disable = ["redefined-outer-name", "invalid-name", "assignment-from-no-return",
-           "unused-argument", "unnecessary-pass", "fixme"]
+           "unused-argument", "unnecessary-pass", "fixme", "too-few-public-methods"]
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
