--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ pre-commit = "^4.3.0"
 ipykernel = "^6.30.1"
 pytest = "^8.4.2"
 mypy = "^1.18.2"
+setuptools = "^80.9.0"
 
 [tool.pylint.format]
 max-line-length = 120
