--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,9 @@ ipykernel = "^6.30.1"
 pytest = "^8.4.2"
 mypy = "^1.18.2"
 setuptools = "^80.9.0"
+pandas-stubs = "^2.3.2.250926"
+types-seaborn = "^0.13.2.20250914"
+types-pyyaml = "^6.0.12.20250915"
 
 [tool.pylint.format]
 max-line-length = 120
@@ -40,6 +43,12 @@ max-line-length = 120
 disable = ["redefined-outer-name", "invalid-name", "assignment-from-no-return", "too-many-branches",
            "unused-argument", "unnecessary-pass", "fixme", "too-few-public-methods"]
 
+# We are telling Poetry to use setuptools as the build system and to run our 'build.py' script.
+[tool.poetry.build]
+script = "build.py"
+# We are providing our own setup logic in build.py
+generate-setup-file = false
+
 [build-system]
-requires = ["poetry-core>=2.0.0,<3.0.0"]
+requires = ["poetry-core>=2.0.0,<3.0.0", "setuptools", "wheel", "mypy"]
 build-backend = "poetry.core.masonry.api"
