--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,9 @@ dependencies = [
     "tqdm (>=4.67.1,<5.0.0)",
     "typer[rich] (>=0.19.2,<0.20.0)",
     "pyyaml (>=6.0.3,<7.0.0)",
-    "jinja2 (>=3.1.6,<4.0.0)"
+    "jinja2 (>=3.1.6,<4.0.0)",
+    "openpyxl (>=3.1.5,<4.0.0)",
+    "pyarrow (>=21.0.0,<22.0.0)"
 ]
 
 [tool.poetry]
