--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ pre-commit = "^4.3.0"
 ipykernel = "^6.30.1"
 pytest = "^8.4.2"
 pytest-benchmark = "^5.1.0"
+snakeviz = "^2.2.2"
 
 [tool.pylint.format]
 max-line-length = 120
