--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ dependencies = [
     "jinja2 (>=3.1.6,<4.0.0)",
     "openpyxl (>=3.1.5,<4.0.0)",
     "pyarrow (>=21.0.0,<22.0.0)",
-    "kagglehub (>=0.2.4, <0.3.0)"
+    "kagglehub (==0.3.13)"
 ]
 
 classifiers = [
