--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,8 @@ dependencies = [
     "openpyxl (>=3.1.5,<4.0.0)",
     "pyarrow (>=21.0.0,<22.0.0)",
     "kagglehub (==0.3.13)",
-    "pydantic (>=2.12.5,<3.0.0)"
+    "pydantic (>=2.12.5,<3.0.0)",
+    "streamlit (>=1.53.0,<2.0.0)"
 ]
 
 classifiers = [
